--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,5 +1,15 @@
 apply plugin: "com.android.application"
 apply plugin: "com.facebook.react"
+project.ext.envConfigFiles = [ 
+    release:".env.dev", 
+    debug:".env.dev", 
+    devdebug:".env.dev", 
+    devrelease:".env.dev", 
+    livedebug: ".env.live", 
+    liverelease: ".env.live"
+]
+// 2nd line, add a new apply:
+apply from: project(':react-native-config').projectDir.getPath() + "/dotenv.gradle"
 
 /**
  * This is the configuration block to customize your React Native Android app.
@@ -72,7 +82,25 @@ android {
     ndkVersion rootProject.ext.ndkVersion
 
     compileSdkVersion rootProject.ext.compileSdkVersion
-
+    flavorDimensions "default"
+    productFlavors {
+    dev {
+            minSdkVersion rootProject.ext.minSdkVersion
+            applicationId "com.rdx.dev"
+            targetSdkVersion rootProject.ext.targetSdkVersion
+            resValue "string", "build_config_package", "com.rdx"
+            versionCode 1
+            versionName "1.0"
+        }
+    live {
+            minSdkVersion rootProject.ext.minSdkVersion
+            applicationId "com.rdx.live"
+            targetSdkVersion rootProject.ext.targetSdkVersion
+            resValue "string", "build_config_package", "com.rdx"
+            versionCode 1
+            versionName "1.0"
+        }
+    }
     namespace "com.rdx"
     defaultConfig {
         applicationId "com.rdx"
@@ -106,6 +134,7 @@ android {
 dependencies {
     // The version of react-native is set by the React Native Gradle Plugin
     implementation("com.facebook.react:react-android")
+    implementation project(':react-native-config')
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}")
     debugImplementation("com.facebook.flipper:flipper-network-plugin:${FLIPPER_VERSION}") {
         exclude group:'com.squareup.okhttp3', module:'okhttp'
