--- a/package.json
+++ b/package.json
@@ -7,11 +7,20 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+
+    "dev-android": "react-native run-android --variant=devDebug appldSuffix dev",
+    "dev-android-release-variant": "react-native run-android --variant=devRelease --appldSuffix dev",
+    "dev-android-release": "cd android && ./gradlew clean && ./gradlew assembleDevRelease",
+
+    "live-android": "react-native run-android --variant=liveDebug appldSuffix live",
+    "live-android-release-variant": "react-native run-android --variant=liveRelease --appldSuffix live",
+    "live-android-release": "cd android && ./gradlew clean && ./gradlew assembleLiveRelease"
   },
   "dependencies": {
     "react": "18.2.0",
-    "react-native": "0.72.6"
+    "react-native": "0.72.6",
+    "react-native-config": "^1.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
